--- a/ui/package.json
+++ b/ui/package.json
@@ -72,6 +72,7 @@
     "tailwindcss-animate": "^1.0.7",
     "use-sync-external-store": "latest",
     "vaul": "^0.9.6",
+    "webrtc": "^1.14.1",
     "zod": "^3.24.1",
     "zustand": "latest"
   },
